--- a/development-challenge-two/src/styles/global.css
+++ b/development-challenge-two/src/styles/global.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;0,700;1,300&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -6,13 +8,12 @@
 }
 
 body {
-  background: #ffffff;
-  color: #002639;
-  -webkit-font-smoothing: antialiased;
+  background: #eee;
+  color: #212121;
 }
 
 body, input, button {
-  font-family: 'Roboto Slab', serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 16px
 }
 
