--- a/development-challenge-two/src/styles/global.css
+++ b/development-challenge-two/src/styles/global.css
@@ -14,7 +14,7 @@ body {
 
 body, input, button {
   font-family: 'Roboto', sans-serif;
-  font-size: 16px
+  font-size: 18px
 }
 
 h1, h2, h3, h4, h5, h6, strong {
@@ -23,4 +23,8 @@ h1, h2, h3, h4, h5, h6, strong {
 
 button {
   cursor: pointer;
+}
+
+button:hover {
+  opacity: 0.7;
 }
